fix for form on mobile 3

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -270,11 +270,11 @@ a.navbar-brand {
 		display:none;
 	}
 	div.main {
-		padding: 42px 36px;
+		padding: 42px 26px;
 	}
 	div.main-row {
-		margin-left: 0 !important;
-		margin-right: 0 !important;
+		margin-left: -5px !important;
+		margin-right: -5px !important;
 	}
 	nav.navbar {
 		margin-bottom: 0px;
